--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+header {
+  padding: 10px 150px;
+  border: #e8ebeb solid 1px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header img {
+  width: 160px;
+  height: 45px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+section {
+  padding: 30px 130px 30px 150px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+section div {
+  display: flex;
+  gap: 45px;
+}
+
+.description {
+  margin-top: 15px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: flex-start;
 }
 
-.App-link {
-  color: #61dafb;
+section h2 {
+  font-family: system-ui, sans-serif;
+  font-size: 32px;
+  font-weight: bold;
+  color: #2e3333;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+section img {
+  width: 350px;
+  height: 200px;
+  border-radius: 5px;
+}
+
+section p {
+  color: #939ea9;
+  font-family: system-ui, sans-serif;
+  font-size: 20px;
+  line-height: 28.8px;
+  width: 850px;
+}
+.menu {
+  background-color: #f2f5f5;
+  height: 300px;
 }
